[package]
name = "bad_apple"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#opt-level = "z"     # Optimize for size.
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[dependencies]
image = "0.23.14"
